			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

14-Mar-2001
~~~~~~~~~~~
Added '--mime-type FILE' option, which simply writes the type of FILE to
standard output (Stephen Watson).

Added 'Home Directory' to Window menu (requested by Graham Borland).

11-Mar-2001
~~~~~~~~~~~
Copying a directory which doesn't have user write permission will give it
user write during the copy to avoid permission denied errors (Liav Asseraf).
New sort option - 'Directories always come first' (requested by Liav Asseraf).

10-Mar-2001
~~~~~~~~~~~
Dragging a lasso box with the middle button toggles the selected state
of the items enclosed (Denis Manente).

09-Mar-2001
~~~~~~~~~~~
Changing the display style now resizes the window (Denis Manente).

08-Mar-2001
~~~~~~~~~~~
New pinboards get a 'Home' icon in the top left corner as new users often
think the pinboard isn't working because it starts empty (suggested by
Vor'Cha).

Converted AppMenu file format to XML.
Added AppMenu file with options to control the pinboard.

06-Mar-2001
~~~~~~~~~~~
Highlight invalid Find expressions in red (Anders Lundmark).

04-Mar-2001
~~~~~~~~~~~
When resizing windows, try to keep the window fully inside the screen area
(Denis Manente).

03-Mar-2001
~~~~~~~~~~~
Updated the Dutch translation (Jan Wagemakers).

27-Feb-2001
~~~~~~~~~~~
When mounting a device, the new window appears after mounting, not before.
This means that it's more likely to get sized correctly (requested by
Ewan Mac Mahon).

24-Feb-2001
~~~~~~~~~~~
Added two new options to control when minibuffer completion beeps (requested
by Liav Asseraf).

20-Feb-2001
~~~~~~~~~~~
Added 'New File...' feature (James Kermode).

16-Feb-2001
~~~~~~~~~~~
Dropping icons on the pinboard positions them sensibly (Diego Zamboni).

09-Feb-2001 (Release 1.1.1)
~~~~~~~~~~~
Moving pinboard icons is nicer - it no longer assumes you dragged the middle
of the text... (Diego Zamboni).

Added a Polish translation (Andrzej Borsuk).
