@@ -1036,7 +1036,12 @@ static gint collection_key_press(GtkWidget *widget, GdkEventKey *event)
 			return FALSE;		/* Pass it on */
 		case ' ':
 			if (item >=0 && item < collection->number_of_items)
+			{
 				collection_toggle_item(collection, item);
+				if (item < collection->number_of_items - 1)
+					collection_set_cursor_item(collection,
+							item + 1);
+			}
 			break;
 		default:
 			return FALSE;
