@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+15-Mar-2001
+~~~~~~~~~~~
+Pressing space (to select/unselect an item) now also moves the cursor to
+the next item (suggested by Anders Lundmark).
+
 14-Mar-2001
 ~~~~~~~~~~~
 Added '--mime-type FILE' option, which simply writes the type of FILE to
